<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Break</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question_time">how long do you want to work:</string>
    <string name="minutes_label">minutes</string>
     <string name="dial">spin to choose time</string>
    <string name="button_go">GO</string>
    <string name="Go_button">GO</string>
    <string name="Main_Activity">Activity</string>
    <string name="Window_About">About</string>
    <string name="About_para1">Study Break\'s goal is to obtain an output of maximum work. Our algorithm allows you perfectly-timed breaks between study/work periods to display optimal efficiency.</string>
    <string name="more_info">When you press "GO" to start your session, settings will disappear and the screen will turn dark, occasionally lighting up to remind you that the phone is still in work mode. Exit out of this app and you will have "given-up". Stay in and once the ring turns green, the app will give you a break, allowing you to use your phone 
		as desired. When your break is up, app will prompt you and you must return back to this app, or else it will be an automatic give-up.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme">Choose a theme:</string>
    <string name="red_green">Red to Green</string>
    <string name="black_gold">Black to Gold</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_theme_black">ThemeBlack</string>
    <string name="title_activity_theme_green">ThemeGreen</string>

</resources>
