<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff02003b"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.StudyBreak.MainActivity" >

    <TextView
        android:id="@+id/question_time"
        style="android:textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/question_time"
        android:textColor="#FFFFFF"
        android:textSize="32sp"


        android:focusable="true"
       
        android:enabled="true"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/display_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        style="android:textViewStyle"
        android:layout_below="@+id/question_time" />

    <TextView
        android:id="@+id/minute_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/minutes_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Go_button"
        android:id="@+id/buttonGO"
        android:layout_below="@+id/minute_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:singleLine="true"
        android:background="#ff02003b"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:textSize="30sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignTop="@+id/display_time"
        android:layout_alignRight="@+id/question_time"
        android:layout_alignLeft="@+id/question_time"
        android:layout_alignStart="@+id/question_time"
        android:layout_alignEnd="@+id/question_time"
        android:layout_above="@+id/minute_label"
        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
        android:max="300"

        android:visibility="visible" />

</RelativeLayout>
